Fix off-by-one pixel shift

--- a/assets/regular.css
+++ b/assets/regular.css
@@ -47,8 +47,8 @@ p {
   max-width: 600px;
   position: fixed;
   left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  top: 10%;
+  transform: translateX(-50%);
 }
 
 #nametag, .sector .miniheader, .nicelink:hover {
